--- a/addons/sourcemod/configs/zombie_riot/raid_victoria.cfg
+++ b/addons/sourcemod/configs/zombie_riot/raid_victoria.cfg
@@ -2025,7 +2025,7 @@
 		{
 			"count"		"0"
 			"health"	"900000"
-			"data"		"20000"
+			"data"		"unkillable"
 			"is_outlined"	"1"
 			"plugin"	"npc_signaller"
 		}
@@ -2060,6 +2060,7 @@
 			"count"				"0"
 			"plugin"			"npc_signaller"
 			"health"			"500000"
+			"data"		"unkillable"
 			"is_health_scaling"	"1"
 			"is_immune_to_nuke"	"1"
 			"is_boss"			"1"
@@ -2070,7 +2071,7 @@
 			"count"				"10"
 			"plugin"			"npc_charger"
 			"data"				"20000"
-			"health"			"10000"
+			"health"			"12500"
 			"extra_speed"		"1.5"
 			"extra_damage"		"3.00"
 		}
@@ -2107,6 +2108,7 @@
 			"count"				"0"
 			"plugin"			"npc_signaller"
 			"health"			"500000"
+			"data"		"unkillable"
 			"is_health_scaling"	"1"
 			"is_immune_to_nuke"	"1"
 			"is_boss"			"1"
@@ -2187,6 +2189,7 @@
 			"count"				"0"
 			"plugin"			"npc_signaller"
 			"health"			"500000"
+			"data"				"unkillable"
 			"is_health_scaling"	"1"
 			"is_immune_to_nuke"	"1"
 			"is_boss"			"1"
