--- a/addons/sourcemod/configs/zombie_riot/weapons.cfg
+++ b/addons/sourcemod/configs/zombie_riot/weapons.cfg
@@ -3085,6 +3085,34 @@
 				"pap_2_internal_melee_trace" 			"0"
 				//This will override the weapon third and first person model.
 			}
+
+			"Explosive AR"
+			{
+				"tags"		"AOE;Burst;DPS"
+				"cost"		"4250"	//"4250"
+				"desc"		"Victorian 1 Desc"
+				"extra_desc"	"VictorianLauncher Desc Extra"
+				"filter"	"iberia"
+				"author"	"Beep_G"
+				
+				"classname"	"tf_weapon_shotgun"
+				"index"		"415"
+				"attributes"	"103 ; 1.0 ; 104 ; 1.0 ; 101 ; 1.0 ; 102 ; 1.0 ; 117 ; 0.5 ; 263 ; 0.0 ; 99 ; 0.75 ; 2 ; 2.15 ; 6 ; 3.0 ; 206 ; 1.2 ; 205 ; 0.90 ; 621 ; 1.0"
+				"model_weapon_override"					"models/weapons/c_models/c_dex_shotgun/c_dex_shotgun.mdl"
+
+				"func_attack"		"ExploAR_M1"
+				"weapon_custom_size_viewmodel" "1.2"
+				"weapon_custom_size" "2.0"
+				"int_ability_onequip"					"164"
+				"override_weapon_slot"        "1"
+				
+				"lag_comp" 						"0"
+				"lag_comp_collision" 		"0"
+				"lag_comp_extend_boundingbox" 		"0"
+				"lag_comp_dont_move_building" 	"1"
+				"weapon_archetype"	"1"
+				"weapon_faction"	"3"	// Victoria
+			}
 			"Elite Sniper"
 			{
 				"filter"	"iberia"
