--- a/addons/sourcemod/configs/zombie_riot/weapons.cfg
+++ b/addons/sourcemod/configs/zombie_riot/weapons.cfg
@@ -3097,7 +3097,7 @@
 				
 				"classname"	"tf_weapon_shotgun"
 				"index"		"415"
-				"attributes"	"103 ; 1.0 ; 104 ; 1.0 ; 101 ; 1.0 ; 102 ; 1.0 ; 117 ; 0.5 ; 263 ; 0.0 ; 99 ; 0.75 ; 2 ; 2.15 ; 6 ; 3.0 ; 206 ; 1.2 ; 205 ; 0.90 ; 621 ; 1.0"
+				"attributes"	"103 ; 1.0 ; 104 ; 1.0 ; 101 ; 1.0 ; 102 ; 1.0 ; 117 ; 0.5 ; 99 ; 0.75 ; 2 ; 2.15 ; 6 ; 3.0 ; 206 ; 1.2 ; 205 ; 0.90 ; 621 ; 1.0"
 				"model_weapon_override"					"models/weapons/c_models/c_dex_shotgun/c_dex_shotgun.mdl"
 
 				"func_attack"		"ExploAR_M1"
