--- a/addons/sourcemod/configs/zombie_riot/weapons.cfg
+++ b/addons/sourcemod/configs/zombie_riot/weapons.cfg
@@ -3095,16 +3095,15 @@
 				"filter"	"iberia"
 				"author"	"Beep_G"
 				
-				"classname"	"tf_weapon_shotgun"
+				"classname"	"tf_weapon_shotgun_primary"
 				"index"		"415"
-				"attributes"	"103 ; 1.0 ; 104 ; 1.0 ; 101 ; 1.0 ; 102 ; 1.0 ; 117 ; 0.5 ; 99 ; 0.75 ; 2 ; 2.15 ; 6 ; 3.0 ; 206 ; 1.2 ; 205 ; 0.90 ; 621 ; 1.0"
+				"attributes"	"103 ; 1.0 ; 104 ; 1.0 ; 101 ; 1.0 ; 102 ; 1.0 ; 45 ; 0.0 ; 117 ; 0.5 ; 99 ; 0.75 ; 2 ; 2.15 ; 6 ; 3.0 ; 205 ; 0.90 ; 122 ; 0.0"
 				"model_weapon_override"					"models/weapons/c_models/c_dex_shotgun/c_dex_shotgun.mdl"
 
-				"func_attack"		"ExploAR_M1"
-				"weapon_custom_size_viewmodel" "1.2"
+				"func_attack"		"BombAR_M1_Attack"
+				"weapon_custom_size_viewmodel" "1.5"
 				"weapon_custom_size" "2.0"
 				"int_ability_onequip"					"164"
-				"override_weapon_slot"        "1"
 				
 				"lag_comp" 						"0"
 				"lag_comp_collision" 		"0"
@@ -3112,6 +3111,7 @@
 				"lag_comp_dont_move_building" 	"1"
 				"weapon_archetype"	"1"
 				"weapon_faction"	"3"	// Victoria
+				"viewmodel_force_class"		"7"
 			}
 			"Elite Sniper"
 			{
@@ -18714,6 +18714,7 @@
 			"weapon_custom_size_viewmodel" "1.3"
 			"weapon_custom_size" "1.5"
 
+			"ammo"					"18"	//SMG Ammo
 			"weapon_archetype"	"1"
 			"hidden"	"1"
 		}
